edited student service fpr get by subject
